# morphompm

./: .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: PHASE3_morphogenesis.md  PIPELINE.md  PREREG_hydrogel.md  PROJECT_STATUS.md
include/basements/core/math/: common.h  matrix3.h  quaternion.h  svd.h  vec3.h
include/morphompm/: growth_solver.h
include/morphompm/math/: common.h  matrix3.h  quaternion.h  svd.h  vec3.h
outputs/: morphompm_dashboard.html  parity_ref.csv
outputs/figures/: bending_timoshenko.csv  bending_timoshenko_desc.md  differential_growth.csv  differential_growth_desc.md  inverse_recovery.csv  inverse_recovery_desc.md
python/: logic_check.py
python/experiments/: diag.py  diff_growth.py  diff_growth_2d.py  growth_mpm.py
python/morphompm/: __init__.py  config.py  constitutive.py  diff.py  integrate.py  io.py  state.py  transfer.py  verify.py
scripts/: logic_check.py  make_dashboard.py  parity.py  plot_growth.py  reproduce.py  results.py  run_scene.py
tests/: test_growth.cpp
