[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "morphompm"
version = "0.1.0"
description = "Differentiable morphoelastic growth-MPM for soft / living matter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hong-Gu Lee" }]
dependencies = ["numpy>=1.21", "matplotlib>=3.5"]

[project.optional-dependencies]
experiments = ["taichi>=1.7"]   # only for python/experiments/ (Taichi; not the package)

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["morphompm"]
